<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ldlidar_component</name>
  <version>0.2.0</version>
  <description>Package containing driver for LDRobot 2D DToF lidars. Based on ROS2 lifecycle concepts.</description>
  
  <maintainer email="walter.lucetti@myzhar.com">Walter Lucetti</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>nav2_util</depend>
  <depend>nav2_msgs</depend>
  <depend>bond</depend>
  <depend>bondcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
